tutorial 002 : encrypt pdf

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 java/itext/readpdf/test.pdf
+java/itext/encryptpdf/encrypted.pdf
+java/itext/encryptpdf/test.pdf
