tutorial 008 : JFreeChar create pie chart

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ java/itext/readpdf/test.pdf
 java/itext/encryptpdf/encrypted.pdf
 java/itext/encryptpdf/test.pdf
 java/core/regex/regexpart1/target/*
+/java/JFreeChart/jfreepie/target/
+/java/JFreeChart/jfreebarchart/target/
